# django-plpy

./: .coveragerc  .env_template  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.md  LICENSE.txt  README (1).md  README.md  SUMMARY.md  manage.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: dockerhub.yml  lint.yml  main.yml  test.yml
docker/: Postgres10.Dockerfile  Postgres11.Dockerfile  Postgres12.Dockerfile  Postgres13.Dockerfile  Postgres9.Dockerfile  docker-compose.yml
docs/: conf.py  index.md
src/: __init__.py
src/django_plpy/: __init__.py  builder.py  installer.py  settings.py  skeleton.py  utils.py
src/django_plpy/management/commands/: checkenv.py  syncfunctions.py
src/django_plpy/migrations/: 0001_initial.py
src/django_plpy/pl_python/: builder.py  simple_function.sql
tests/: conftest.py  test_skeleton.py  tests.py
tests/books/: admin.py  models.py
tests/books/migrations/: 0001_initial.py  0002_alter_book_name.py  0003_book_stock_days_left.py  0004_alter_book_stock_days_left.py
tests/testapp/: asgi.py  import_module.py  manage.py  settings.py  urls.py  wsgi.py
tests/testapp/books/: models.py
